# skill_learning_soft_robot

./: .gitignore  vla_collect_3cams_v4.py
soft_vla/: ARCHITECTURE.md  FINAL_REPORT.md  README.md  ROADMAP.md  environment.cuda.yml  pyproject.toml  requirements.txt
soft_vla/configs/: dataset.public_smoke.yaml  dataset.real_records.resolved.json  dataset.real_records.yaml  dataset.real_records_7_03_1_delta_tcp.yaml  dataset.real_records_7_03_1_delta_tcp_pressure_state.yaml  dataset.synthetic.resolved.json  dataset.synthetic.yaml  dataset.synthetic_ci.yaml  gripper_training_baseline.yaml  gripper_training_identity.yaml  gripper_training_weighted.yaml  hardware_template.yaml  inference_chunk.yaml  inference_offline.yaml  inference_real_7_03_1_pressure_state_crop_cam1_sigmoid_gripper_smoke.yaml  inference_real_7_03_1_pressure_state_crop_cam1_smoke.yaml  inference_real_7_03_1_smoke.yaml  inference_real_records.yaml  inference_receding_horizon.yaml  inference_rtc.yaml  inference_single_step.yaml  inference_temporal_ensemble.yaml  motion_control_eval.yaml  smolvla_deploy.yaml  smolvla_full_finetune_16gb.yaml  smolvla_lora_8gb.yaml  smolvla_real_7_03_1_full_finetune_smoke.yaml  smolvla_real_7_03_1_pressure_state_crop_cam1_sigmoid_gripper_smoke.yaml  smolvla_real_7_03_1_pressure_state_crop_cam1_smoke.yaml  smolvla_real_expert_fallback.yaml  smolvla_real_full_finetune.yaml  smolvla_smoke_8gb.yaml  smolvla_train_16gb.yaml
soft_vla/docs/: REAL_ROBOT_DEBUG.md  SMOLVLA_EXECUTION_MODES.md
vision_to_state/: README.md  environment.yml  pyproject.toml  requirements.txt
(+279 files in other folders)
