[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "soft-vla"
version = "0.1.0"
description = "Soft robot VLA smoke testing project"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pillow",
  "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]

