[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "soft-robot-vision-to-state"
version = "0.1.0"
description = "Supervised RGB-D camera2 to 12D TCP state estimator for a soft robot arm."
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
  "pillow",
  "tqdm",
  "pyyaml",
  "matplotlib",
  "pyarrow",
]

[tool.setuptools.packages.find]
where = ["src"]
